# Rust-PubSub-Client

./: .gitignore  Cargo.toml  PERFORMANCE.md
benches/: client_benchmark.rs
examples/: simple_client.rs  wildcard_handler.rs
src/: client.rs  config.rs  error.rs  idempotence.rs  lib.rs  message.rs
tests/: idempotence_test.rs  integration_test.rs
